<resources>
    <string name="app_name">Bantumi</string>
    <string name="saveFileName">bantumiGame.txt</string>

    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">CPU</string>
    <string name="txtBtnReset">Reset</string>
    <string name="txtBtnDeleteAll">Eliminar\ntodo</string>
    <string name="txtBtnFilter">Filtrar por\nJugador</string>
    <string name="txtBtnClear">Quitar\nfiltros</string>

    <!-- Valores del juego -->
    <string name="intNumInicialSemillas">4</string>
    <string name="txtInitialScore">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage">
        <p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
            todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
            en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes
            reglas:
        </p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador
            </li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas
            </li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>

    <!-- Diálogo Reset -->
    <string name="txtDialogoResetTitulo">Resetear partida</string>
    <string name="txtDialogoResetPregunta">¿Quiere resetear la partida?</string>

    <!-- Diálogo Recupera -->
    <string name="txtDialogoRestoreTitulo">Recuperar partida</string>
    <string name="txtDialogoRestorePregunta">¿Desea recuperar la última partida guardada?</string>

    <!-- Diálogo EliminaTodo -->
    <string name="txtDialogoDeleteAllTitulo">Eliminar partidas</string>
    <string name="txtDialogoDeleteAllPregunta">¿Desea eliminar todas las partidas guardadas?</string>

    <!-- Diálogo EliminaTodo -->
    <string name="txtDialogoFilterByTitulo">Filtrar por jugador</string>

    <!-- Opciones Diálogo -->
    <string name="txtDialogoAfirmativo">Sí</string>
    <string name="txtDialogoNegativo">No</string>
    <string name="txtDialogoCancel">Cancelar</string>
    <string name="txtDialogoAccept">Aceptar</string>

    <!-- Acciones Juego -->
    <string name="savedGame">Juego guardado!</string>
    <string name="restoreNoChanges">No hay cambios</string>
    <string name="restoreOk">Partida restaurada</string>
    <string name="title_activity_bantumi_settings">BantumiSettings</string>

    <!-- Preferences -->

    <!-- Preferences -->
    <string name="player1_wael">Nombre del Jugador</string>
    <string name="key_player1">player1</string>
    <string name="key_token_num">token_num</string>
    <string name="token_pref">Numero inicial de semillas</string>





    <string name="exit"> Exit </string>
    <string name="new_game" > New game </string>

    <string name="txtDialogoFinalAfirmativo">Game Ends</string>

</resources>