<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RankingActivity">

    <ListView
        android:id="@+id/lvRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/listview_item" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnDeleteAll"
            style="@style/ActionButton"
            android:onClick="deleteAll" />

        <Button
            android:id="@+id/btFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnFilter"
            style="@style/ActionButton"
            android:onClick="filterByPlayer" />

        <Button
            android:id="@+id/btClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnClear"
            style="@style/ActionButton"
            android:onClick="clear" />
    </LinearLayout>


</RelativeLayout>